@@ -22,6 +22,12 @@ Documentation
 - Added "Finding a Resource by Path" section to the Resources narrative
   chapter.
 
+- Added "Obtaining the Lineage of a Resource" to the Resources narrative
+  chapter.
+
+- Added "Determining if a Resource is In The Lineage of Another Resource" to
+  Resources narrative chapter.
+
 1.0a7 (2010-12-20)
 ==================
 
